tests/neg-custom-args/captures/cc1.scala
object Test:

  def f[A <: Any retains *](x: A): Any = x // error

